--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "João Julio <joaopjt@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "watch": "webpack --watch",
-    "build": "cross-env NODE_ENV=prod webpack"
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --colors --hot",
+    "build": "cross-env NODE_ENV=production webpack --colors"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -17,13 +17,12 @@
     "cross-origin": "^1.0.6",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "glob": "^7.1.2",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.2",
     "webpack-dev-server": "^2.7.1"
-  },
-  "dependencies": {
-    "vue": "^2.4.2"
   }
 }
