--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack-boilerplate",
   "version": "1.0.0",
-  "description": "webpack boilerplate with scss, js, and vue.",
+  "description": "webpack boilerplate with scss, js, and nunjucks.",
   "main": "index.js",
   "repository": "git@github.com:joaopjt/webpack-boilerplate.git",
   "author": "João Julio <joaopjt@gmail.com>",
@@ -16,10 +16,16 @@
     "babel-preset-es2015": "^6.24.1",
     "cross-origin": "^1.0.6",
     "css-loader": "^0.28.4",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb-base": "^12.0.2",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "glob": "^7.1.2",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
+    "nunjucks-html-loader": "^1.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.2",
