--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "webpack-boilerplate",
+  "name": "webpack-nunjucks-boilerplate",
   "version": "1.0.0",
   "description": "webpack boilerplate with scss, js, and nunjucks.",
   "main": "index.js",
-  "repository": "git@github.com:joaopjt/webpack-boilerplate.git",
+  "repository": "git@github.com:joaopjt/webpack-nunjucks-boilerplate.git",
   "author": "João Julio <joaopjt@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -11,6 +11,7 @@
     "build": "cross-env NODE_ENV=production webpack --colors"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.5",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
@@ -26,6 +27,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "nunjucks-html-loader": "^1.1.0",
+    "postcss-loader": "^2.0.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.2",
