--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "author": "João Julio <joaopjt@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "watch": "cross-env NODE_ENV=development webpack-dev-server --colors --hot",
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --colors --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --colors"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "cross-origin": "^1.0.6",
     "css-loader": "^0.28.4",
