--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
     "cross-origin": "^1.0.6",
     "css-loader": "^0.28.4",
     "eslint": "^4.8.0",
