--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "postcss-loader": "^2.0.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "stylelint": "^8.2.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-webpack-plugin": "^0.9.0",
     "webpack": "^3.5.2",
     "webpack-dev-server": "^2.7.1"
   }
