--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "webpack-nunjucks-boilerplate",
-  "version": "1.0.0",
-  "description": "webpack boilerplate with scss, js, and nunjucks.",
+  "version": "1.1.0",
+  "description": "Webpack boilerplate with scss, js, and nunjucks.",
   "main": "index.js",
   "repository": "git@github.com:joaopjt/webpack-nunjucks-boilerplate.git",
   "author": "João Julio <joaopjt@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "watch": "cross-env NODE_ENV=development webpack-dev-server --colors --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --colors"
+    "watch": "./node_modules/.bin/cross-env NODE_ENV=development webpack-dev-server --colors --inline --hot",
+    "build": "./node_modules/.bin/cross-env NODE_ENV=production webpack --progress --colors"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
