--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-nunjucks-boilerplate",
-  "version": "1.1.0",
+  "version": "2.0.5",
   "description": "Webpack boilerplate with scss, js, and nunjucks.",
   "main": "index.js",
   "repository": "git@github.com:joaopjt/webpack-nunjucks-boilerplate.git",
@@ -11,14 +11,12 @@
     "build": "./node_modules/.bin/cross-env NODE_ENV=production webpack --progress --colors"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "cross-origin": "^1.0.6",
-    "css-loader": "^0.28.4",
     "eslint": "^4.8.0",
     "eslint-config-airbnb-base": "^12.0.2",
     "eslint-loader": "^1.9.0",
@@ -28,14 +26,8 @@
     "glob": "^7.1.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.5.3",
+    "laravel-mix": "^5.0.4",
     "nunjucks-html-loader": "^1.1.0",
-    "postcss-loader": "^2.0.7",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "stylelint": "^8.2.0",
-    "stylelint-config-standard": "^17.0.0",
-    "stylelint-webpack-plugin": "^0.9.0",
     "webpack": "^3.5.2",
     "webpack-dev-server": "^2.11.5"
   }
