--- a/package.json
+++ b/package.json
@@ -7,35 +7,16 @@
   "author": "João Julio <joaopjt@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "node ./node_modules/cross-env/src/bin/cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "node ./node_modules/cross-env/src/bin/cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "node ./node_modules/cross-env/src/bin/cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "node ./node_modules/cross-env/src/bin/cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "dev": "node ./node_modules/cross-env/src/bin/cross-env NODE_ENV=development webpack --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "node ./node_modules/cross-env/src/bin/cross-env NODE_ENV=development webpack --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "hot": "node ./node_modules/cross-env/src/bin/cross-env NODE_ENV=development webpack-dev-server --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "node ./node_modules/cross-env/src/bin/cross-env NODE_ENV=production webpack --progress --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
     "cross-env": "^7.0.3",
     "cross-origin": "^1.0.6",
-    "eslint": "^4.8.0",
-    "eslint-config-airbnb-base": "^12.0.2",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.7.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.5",
-    "glob": "^7.1.2",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
     "laravel-mix": "^6.0.39",
     "laravel-mix-nunjucks-2": "^1.0.0",
-    "nunjucks-html-loader": "^1.1.0",
-    "resolve-url-loader": "^3.1.0",
-    "sass": "^1.44.0",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0"
   }
